--- a/now.json
+++ b/now.json
@@ -1,7 +1,9 @@
 {
   "version": 2,
   "name": "lightning-reader",
+  "alias": "lightningreader.club",
   "builds": [
+    { "src": "api/**/*.js", "use": "@now/node" },
     {
       "src": "package.json",
       "use": "@now/static-build",
@@ -14,14 +16,8 @@
     { "src": "/manifest.json", "dest": "/manifest.json" },
     { "src": "/precache-manifest.(.*)", "dest": "/precache-manifest.$1" },
     {
-      "src": "/service-worker.js",
-      "headers": { "cache-control": "s-maxage=0" },
-      "dest": "/service-worker.js"
-    },
-    {
-      "src": "/(.*)",
-      "headers": { "cache-control": "s-maxage=31536000,immutable" },
-      "dest": "/$1"
+      "src": "/api/(.*)",
+      "dest": "/api"
     }
   ]
 }
