--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
+    "eslint": "^5.16.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "marked": "^0.6.2",
@@ -43,7 +44,6 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.5",
-    "@radar/lnrpc": "^0.6.0-beta.1",
     "blockstack": "^19.1.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -51,6 +51,7 @@
     "express-session": "^1.16.1",
     "helmet": "^3.18.0",
     "memorystore": "^1.6.1",
+    "opennode": "^1.1.1",
     "prop-types": "^15.7.2",
     "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
