--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,10 +1,12 @@
 {
-  "name": "Hello, Blockstack",
-  "start_url": "localhost:8080",
-  "description": "A simple demo of Blockstack Auth",
-  "icons": [{
-    "src": "http://localhost:8080/icon-192x192.png",
-    "sizes": "192x192",
-    "type": "image/png"
-  }]
+  "name": "Lightning Reader",
+  "start_url": "https://lightningreader.club",
+  "description": "Speed reading where you pay for time with Bitcoin on lightning",
+  "icons": [
+    {
+      "src": "http://localhost:8080/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    }
+  ]
 }
