--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "marked": "^0.6.2",
@@ -45,18 +51,18 @@
   "dependencies": {
     "@babel/runtime": "^7.4.5",
     "blockstack": "^19.1.0",
-    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
-    "express": "^4.17.1",
-    "express-session": "^1.16.1",
-    "helmet": "^3.18.0",
-    "memorystore": "^1.6.1",
-    "opennode": "^1.1.1",
+    "bsert": "^0.0.10",
+    "immutable": "^4.0.0-rc.12",
+    "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
-    "qrcode.react": "^0.9.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1"
   }
