--- a/api/package.json
+++ b/api/package.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "express": "^4.17.1",
-    "express-session": "^1.16.1",
     "helmet": "^3.18.0",
-    "memorystore": "^1.6.1",
     "opennode": "^1.1.1"
   }
 }
