--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.4.5",
+    "axios": "^0.19.0",
     "blockstack": "^19.1.0",
     "bootstrap": "^4.3.1",
     "bsert": "^0.0.10",
