--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
     "cookie-session": "^1.3.3",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
-    "opennode": "^1.1.1"
+    "opennode": "^1.1.1",
+    "radiks-server": "^0.1.12"
   }
 }
