--- a/package.json
+++ b/package.json
@@ -57,14 +57,17 @@
     "immutable": "^4.0.0-rc.12",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
+    "radiks": "^0.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-mde": "^7.4.1",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.87.1"
+    "semantic-ui-react": "^0.87.1",
+    "showdown": "^1.9.0"
   }
 }
