--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,6 @@
       "@babel/preset-react"
     ],
     "plugins": [
-        ["@babel/plugin-transform-runtime", {
-            "corejs": 2
-        }]
+        ["@babel/plugin-proposal-class-properties"]
     ]
 }
