--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "webpack-dev-server": "^3.7.1"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/runtime": "^7.4.5",
     "axios": "^0.19.0",
+    "bcrypto": "^4.0.1",
     "blockstack": "^19.1.0",
     "bootstrap": "^4.3.1",
     "bsert": "^0.0.10",
