--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "blockstack": "^19.1.0",
     "bootstrap": "^4.3.1",
     "bsert": "^0.0.10",
+    "draft-js": "^0.10.5",
     "immutable": "^4.0.0-rc.12",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
