--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack -p",
+    "pre-build": "cd node_modules/chainpoint-client/ && npm install && npm run build && cd ../../",
+    "build": "npm run pre-build && webpack -p",
     "now-build": "npm run build",
     "now-dev": "npm start -- --port $PORT"
   },
