--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,8 @@
 {
   "license": "MIT",
   "dependencies": {
+    "bcrypto": "^4.1.0",
+    "blockstack": "^19.2.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
