--- a/now.json
+++ b/now.json
@@ -7,7 +7,8 @@
       "SESSION_SECRET": "@session-secret",
       "OPEN_NODE_KEY": "@open-node-key",
       "APP_PRIVATE_KEY": "@app-private-key",
-      "MONGODB_URI": "@my-mongodb-uri"
+      "MONGODB_URI": "@my-mongodb-uri",
+      "LN_URI": "@ln-uri"
     }
   },
   "builds": [
