add proof proxy and update home design for new logo

--- a/now.json
+++ b/now.json
@@ -38,6 +38,10 @@
       "dest": "/api/invoice"
     },
     {
+      "src": "/api/proofs(.*)",
+      "dest": "/api/proofs"
+    },
+    {
       "handle": "filesystem"
     },
     {
