proxy proof lookups for unauthed proof and doc requests

--- a/api/package.json
+++ b/api/package.json
@@ -14,5 +14,8 @@
     "radiks-server": "^0.1.12",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7"
+  },
+  "scripts": {
+    "now-build": "cd node_modules/chainpoint-client/ && npm install && npm run build && cd ../../"
   }
 }
