add support for free content

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 dist
-public/build
+public/*
 
 # Dependency directories
 node_modules
