--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Prism",
   "start_url": "https://prismreader.app",
-  "description": "Your keys, your content. Own the conversation.",
+  "description": "Content sharing and blogging platform, decentralized.",
   "icons": [
     {
       "src": "https://prismreader.app/logo.png",
