--- a/now.json
+++ b/now.json
@@ -2,15 +2,6 @@
   "version": 2,
   "name": "prism",
   "alias": "prismreader.app",
-  "build": {
-    "env": {
-      "SESSION_SECRET": "@session-secret",
-      "OPEN_NODE_KEY": "@open-node-key",
-      "APP_PRIVATE_KEY": "@app-private-key",
-      "MONGODB_URI": "@my-mongodb-uri",
-      "LN_URI": "@ln-uri"
-    }
-  },
   "builds": [
     {
       "src": "api/**/*.js",
@@ -18,10 +9,7 @@
     },
     {
       "src": "package.json",
-      "use": "@now/static-build",
-      "config": {
-        "distDir": "public/build"
-      }
+      "use": "@now/static-build"
     }
   ],
   "routes": [
@@ -43,10 +31,6 @@
     },
     {
       "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
     }
   ]
 }
