--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "bootstrap": "^4.3.1",
     "bsert": "^0.0.10",
     "chainpoint-client": "chainpoint/chainpoint-client-js#core-v2-support",
+    "dompurify": "^1.0.11",
     "draft-js": "^0.10.5",
     "immutable": "^4.0.0-rc.12",
     "prettier": "^1.18.2",
