--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,12 @@
     "bcrypto": "^4.1.0",
     "blockstack": "^19.2.1",
     "body-parser": "^1.19.0",
+    "boltwall": "^3.0.1",
     "bsert": "^0.0.10",
     "chainpoint-client": "chainpoint/chainpoint-client-js#core-v2-support",
     "cookie-parser": "^1.4.4",
     "cookie-session": "^1.3.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
     "macaroons.js": "^0.3.8",
@@ -24,5 +26,8 @@
   },
   "scripts": {
     "now-build": "cd node_modules/chainpoint-client/ && npm install && npm run build && cd ../../"
+  },
+  "devDependencies": {
+    "dotenv": "^8.1.0"
   }
 }
