--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
     "opennode": "^1.1.1",
     "radiks-server": "^0.1.12",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "request-promise-native": "^1.0.7",
+    "webpack-dev-middleware": "^3.7.0"
   },
   "resolutions": {
     "lodash": "^4.17.13"
