--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
+    "ln-service": "github:bucko13/ln-service#path",
     "macaroons.js": "^0.3.8",
     "opennode": "^1.1.1",
     "radiks-server": "^0.1.12",
