Support now-less deployment (#14)
* update api routes to also support now-less development

* update server file to run app's full backend if desired.

* add npm script to run app with nodemon instead of now

* update deps and clean up server code

--- a/api/package.json
+++ b/api/package.json
@@ -12,12 +12,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.18.0",
-    "ln-service": "bucko13/ln-service#path",
+    "ln-service": "github:bucko13/ln-service#path",
     "macaroons.js": "^0.3.8",
     "opennode": "^1.1.1",
     "radiks-server": "^0.1.12",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.7"
+    "request-promise-native": "^1.0.7",
+    "webpack-dev-middleware": "^3.7.0"
   },
   "resolutions": {
     "lodash": "^4.17.13"
