--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sharing ideas, distributed",
   "main": "index.js",
   "scripts": {
-    "start": "PORT=5000 nodemon api/server",
+    "start": "nodemon api/server",
     "start:dev": "webpack-dev-server",
     "lint": "eslint src/",
     "build:prod": "webpack --config=webpack-prod.config.js",
