--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Sharing ideas, distributed",
   "main": "index.js",
   "scripts": {
-    "start:local": "PORT=3000 nodemon api/server",
-    "start": "webpack-dev-server",
+    "start": "nodemon api/server",
+    "start:dev": "webpack-dev-server",
     "lint": "eslint src/",
+    "build:prod": "webpack --config=webpack-prod.config.js",
     "pre-build": "cd node_modules/chainpoint-client/ && npm install && npm run build && cd ../../",
     "build": "npm run pre-build && webpack -p",
     "now-build": "npm run build",
