--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
     "bcrypto": "^4.1.0",
     "blockstack": "^19.2.1",
     "body-parser": "^1.19.0",
+    "boltwall": "^5.0.11",
     "bsert": "^0.0.10",
     "chainpoint-client": "chainpoint/chainpoint-client-js#core-v2-support",
     "cookie-parser": "^1.4.4",
