--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "prism",
   "version": "1.0.0",
   "description": "Sharing ideas, distributed",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon api/server",
-    "start:dev": "webpack-dev-server",
     "build:prod": "webpack --config=webpack-prod.config.js",
     "clean": "rm -rf public && mkdir public",
     "start:prod": "npm run clean && npm run build:prod && ENVIRONMENT=prod npm run start -- --max-old-space-size=4096",
@@ -32,9 +31,9 @@
     "node": ">0.10.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
@@ -42,47 +41,48 @@
     "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
-    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.13.0",
-    "file-loader": "^4.0.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "marked": "^0.7.0",
     "path": "^0.12.7",
     "request": "^2.88.0",
-    "request-promise-native": "^1.0.7",
+    "request-promise-native": "^1.0.8",
     "style-loader": "^0.23.1",
     "turndown": "^5.0.3",
-    "url-loader": "^2.0.0",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.7.1"
+    "url-loader": "^2.3.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/runtime": "^7.5.5",
-    "axios": "^0.19.0",
-    "bcrypto": "^4.0.1",
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/runtime": "^7.8.4",
+    "axios": "^0.19.2",
+    "bcrypto": "^4.3.2",
     "blockstack": "^19.1.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "bsert": "^0.0.10",
-    "chainpoint-client": "chainpoint/chainpoint-client-js#core-v2-support",
-    "dompurify": "^2.0.7",
+    "chainpoint-client": "github:chainpoint/chainpoint-client-js#core-v2-support",
+    "dompurify": "^2.0.8",
     "draft-js": "^0.10.5",
     "immutable": "^4.0.0-rc.12",
-    "nodemon": "^1.19.1",
-    "prettier": "^1.18.2",
+    "lsat-js": "^1.0.7",
+    "nodemon": "^1.19.4",
+    "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
-    "qs": "^6.7.0",
+    "qs": "^6.9.1",
     "radiks": "^0.2.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-mde": "^7.4.1",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
-    "redux": "^4.0.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-mde": "^7.9.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
